Agg get by last update method